cmake_minimum_required(VERSION 3.17)

project (tutorial)

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	set(CMAKE_CXX_FLAGS "/await:strict /EHsc /std:c++20 /D _WIN32_WINNT=0x0601")
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    set(CMAKE_CXX_FLAGS "-Wall -std=c++20 -fcoroutines")
else()
	message("Unsupported compiler")
endif()

include_directories(../../include)

add_executable(p1000 p1000.cpp)
target_link_libraries(p1000 corolib)
add_executable(p1001-recursive p1001-recursive.cpp)
target_link_libraries(p1001-recursive corolib)
add_executable(p1002-no-coroutines p1002-no-coroutines.cpp)
target_link_libraries(p1002-no-coroutines corolib)

add_executable(p1010-thread p1010-thread.cpp)
target_link_libraries(p1010-thread corolib)
add_executable(p1011-thread-recursive p1011-thread-recursive.cpp)
target_link_libraries(p1011-thread-recursive corolib)

add_executable(p1050-resume_same_thread p1050-resume_same_thread.cpp)
target_link_libraries(p1050-resume_same_thread corolib)
add_executable(p1052-resume_same_thread p1052-resume_same_thread.cpp)
target_link_libraries(p1052-resume_same_thread corolib)
add_executable(p1054-resume_same_thread p1054-resume_same_thread.cpp)
target_link_libraries(p1054-resume_same_thread corolib)

add_executable(p1060-resume_new_thread p1060-resume_new_thread.cpp)
target_link_libraries(p1060-resume_new_thread corolib)
add_executable(p1062-resume_new_thread p1062-resume_new_thread.cpp)
target_link_libraries(p1062-resume_new_thread corolib)
add_executable(p1064-resume_new_thread p1064-resume_new_thread.cpp)
target_link_libraries(p1064-resume_new_thread corolib)

add_executable(p1100-auto_reset_event p1100-auto_reset_event.cpp)
target_link_libraries(p1100-auto_reset_event corolib)
add_executable(p1105-auto_reset_event p1105-auto_reset_event.cpp)
target_link_libraries(p1105-auto_reset_event corolib)
add_executable(p1110-auto_reset_event-oneway_task p1110-auto_reset_event-oneway_task.cpp)
target_link_libraries(p1110-auto_reset_event-oneway_task corolib)
add_executable(p1120-auto_reset_event-thread p1120-auto_reset_event-thread.cpp)
target_link_libraries(p1120-auto_reset_event-thread corolib)

add_executable(p1200-mini0 p1200-mini0.cpp)
target_link_libraries(p1200-mini0 corolib)
add_executable(p1210-mini1-thread p1210-mini1-thread.cpp)
target_link_libraries(p1210-mini1-thread corolib)
add_executable(p1220-mini1-oneway_task-thread p1220-mini1-oneway_task-thread.cpp)
target_link_libraries(p1220-mini1-oneway_task-thread corolib)

#add_executable(p1300-future p1300-future.cpp)
#target_link_libraries(p1300-future corolib)

add_executable(p1400-async_operation p1400-async_operation.cpp p1400.cpp)
target_link_libraries(p1400-async_operation corolib)
add_executable(p1402-async_operation-eventqueue p1402-async_operation-eventqueue.cpp p1400.cpp)
target_link_libraries(p1402-async_operation-eventqueue corolib)
add_executable(p1404-async_operation-thread p1404-async_operation-thread.cpp p1400.cpp)
target_link_libraries(p1404-async_operation-thread corolib)
add_executable(p1406-async_operation-immediate p1406-async_operation-immediate.cpp p1400.cpp)
target_link_libraries(p1406-async_operation-immediate corolib)

add_executable(p1410-async_operation p1410-async_operation.cpp class01.cpp p1410.cpp)
target_link_libraries(p1410-async_operation corolib)
add_executable(p1412-async_operation-eventqueue p1412-async_operation-eventqueue.cpp class01.cpp p1410.cpp)
target_link_libraries(p1412-async_operation-eventqueue corolib)
add_executable(p1414-async_operation-thread p1414-async_operation-thread.cpp class01.cpp p1410.cpp)
target_link_libraries(p1414-async_operation-thread corolib)
add_executable(p1416-async_operation-immediate p1416-async_operation-immediate.cpp class01.cpp p1410.cpp)
target_link_libraries(p1416-async_operation-immediate corolib)

add_executable(p1420-async_operation p1420-async_operation.cpp class01.cpp p1420.cpp)
target_link_libraries(p1420-async_operation corolib)
add_executable(p1422-async_operation-eventqueue p1422-async_operation-eventqueue.cpp class01.cpp p1420.cpp)
target_link_libraries(p1422-async_operation-eventqueue corolib)
add_executable(p1424-async_operation-thread p1424-async_operation-thread.cpp class01.cpp p1420.cpp)
target_link_libraries(p1424-async_operation-thread corolib)
add_executable(p1426-async_operation-immediate p1426-async_operation-immediate.cpp class01.cpp p1420.cpp)
target_link_libraries(p1426-async_operation-immediate corolib)
add_executable(p1428-async_operation-evtq-imm p1428-async_operation-evtq-imm.cpp class01.cpp p1420.cpp)
target_link_libraries(p1428-async_operation-evtq-imm corolib)
add_executable(p1429-async_operation-thread-imm p1429-async_operation-thread-imm.cpp class01.cpp p1420.cpp)
target_link_libraries(p1429-async_operation-thread-imm corolib)

add_executable(p1430-async_operation p1430-async_operation.cpp class01.cpp p1430.cpp)
target_link_libraries(p1430-async_operation corolib)
add_executable(p1432-async_operation-eventqueue p1432-async_operation-eventqueue.cpp class01.cpp p1430.cpp)
target_link_libraries(p1432-async_operation-eventqueue corolib)
add_executable(p1434-async_operation-thread p1434-async_operation-thread.cpp class01.cpp p1430.cpp)
target_link_libraries(p1434-async_operation-thread corolib)
add_executable(p1436-async_operation-immediate p1436-async_operation-immediate.cpp class01.cpp p1430.cpp)
target_link_libraries(p1436-async_operation-immediate corolib)
add_executable(p1438-async_operation-evtq-imm p1438-async_operation-evtq-imm.cpp class01.cpp p1430.cpp)
target_link_libraries(p1438-async_operation-evtq-imm corolib)
add_executable(p1439-async_operation-thread-imm p1439-async_operation-thread-imm.cpp class01.cpp p1430.cpp)
target_link_libraries(p1439-async_operation-thread-imm corolib)

add_executable(p1440-async_operation p1440-async_operation.cpp class01.cpp p1440.cpp)
target_link_libraries(p1440-async_operation corolib)
add_executable(p1442-async_operation-eventqueue p1442-async_operation-eventqueue.cpp class01.cpp p1440.cpp)
target_link_libraries(p1442-async_operation-eventqueue corolib)
add_executable(p1444-async_operation-thread p1444-async_operation-thread.cpp class01.cpp p1440.cpp)
target_link_libraries(p1444-async_operation-thread corolib)
add_executable(p1446-async_operation-immediate p1446-async_operation-immediate.cpp class01.cpp p1440.cpp)
target_link_libraries(p1446-async_operation-immediate corolib)
add_executable(p1448-async_operation-evtq-imm p1448-async_operation-evtq-imm.cpp class01.cpp p1440.cpp)
target_link_libraries(p1448-async_operation-evtq-imm corolib)
add_executable(p1449-async_operation-thread-imm p1449-async_operation-thread-imm.cpp class01.cpp p1440.cpp)
target_link_libraries(p1449-async_operation-thread-imm corolib)

add_executable(p1450-async_operation p1450-async_operation.cpp class01.cpp p1450.cpp)
target_link_libraries(p1450-async_operation corolib)
add_executable(p1452-async_operation-eventqueue p1452-async_operation-eventqueue.cpp class01.cpp p1450.cpp)
target_link_libraries(p1452-async_operation-eventqueue corolib)
add_executable(p1454-async_operation-thread p1454-async_operation-thread.cpp class01.cpp p1450.cpp)
target_link_libraries(p1454-async_operation-thread corolib)
add_executable(p1456-async_operation-immediate p1456-async_operation-immediate.cpp class01.cpp p1450.cpp)
target_link_libraries(p1456-async_operation-immediate corolib)
add_executable(p1458-async_operation-evtq-imm p1458-async_operation-evtq-imm.cpp class01.cpp p1450.cpp)
target_link_libraries(p1458-async_operation-evtq-imm corolib)
add_executable(p1459-async_operation-thread-imm p1459-async_operation-thread-imm.cpp class01.cpp p1450.cpp)
target_link_libraries(p1459-async_operation-thread-imm corolib)

add_executable(p1460-async_operation p1460-async_operation.cpp class02.cpp p1460.cpp)
target_link_libraries(p1460-async_operation corolib)
add_executable(p1462-async_operation-eventqueue p1462-async_operation-eventqueue.cpp class02.cpp p1460.cpp)
target_link_libraries(p1462-async_operation-eventqueue corolib)
add_executable(p1464-async_operation-thread p1464-async_operation-thread.cpp class02.cpp p1460.cpp)
target_link_libraries(p1464-async_operation-thread corolib)
add_executable(p1466-async_operation-immediate p1466-async_operation-immediate.cpp class02.cpp p1460.cpp)
target_link_libraries(p1466-async_operation-immediate corolib)
add_executable(p1468-async_operation-evtq-imm p1468-async_operation-evtq-imm.cpp class02.cpp p1460.cpp)
target_link_libraries(p1468-async_operation-evtq-imm corolib)
add_executable(p1469-async_operation-thread-imm p1469-async_operation-thread-imm.cpp class02.cpp p1460.cpp)
target_link_libraries(p1469-async_operation-thread-imm corolib)

add_executable(p1472-async_operation-eventqueue p1472-async_operation-eventqueue.cpp class02.cpp p1470.cpp)
target_link_libraries(p1472-async_operation-eventqueue corolib)
add_executable(p1474-async_operation-thread p1474-async_operation-thread.cpp class02.cpp p1470.cpp)
target_link_libraries(p1474-async_operation-thread corolib)
add_executable(p1476-async_operation-immediate p1476-async_operation-immediate.cpp class02.cpp p1470.cpp)
target_link_libraries(p1476-async_operation-immediate corolib)

add_executable(p1500-async_operation p1500-async_operation.cpp p1500.cpp)
target_link_libraries(p1500-async_operation corolib)

add_executable(p1600-async_operation p1600-async_operation.cpp p1600.cpp)
target_link_libraries(p1600-async_operation corolib)

add_executable(p1700-async_operation p1700-async_operation.cpp p1700.cpp)
target_link_libraries(p1700-async_operation corolib)

add_executable(p1700a-async_operation p1700-async_operation.cpp p1700a.cpp)
target_link_libraries(p1700a-async_operation corolib)

add_executable(p1702-async_operation p1702-async_operation.cpp p1700.cpp)
target_link_libraries(p1702-async_operation corolib)

add_executable(p1800-async_operation p1800-async_operation.cpp p1800.cpp)
target_link_libraries(p1800-async_operation corolib)
add_executable(p1802-async_operation-eventqueue p1802-async_operation-eventqueue.cpp p1800.cpp)
target_link_libraries(p1802-async_operation-eventqueue corolib)
add_executable(p1804-async_operation-thread p1804-async_operation-thread.cpp p1800.cpp)
target_link_libraries(p1804-async_operation-thread corolib)

add_executable(p1810-async_operation p1800-async_operation.cpp p1810.cpp)
target_link_libraries(p1810-async_operation corolib)
add_executable(p1812-async_operation-eventqueue p1802-async_operation-eventqueue.cpp p1810.cpp)
target_link_libraries(p1812-async_operation-eventqueue corolib)
add_executable(p1814-async_operation-thread p1804-async_operation-thread.cpp p1810.cpp)
target_link_libraries(p1814-async_operation-thread corolib)

add_executable(p1820-async_operation p1820-async_operation.cpp p1820.cpp)
target_link_libraries(p1820-async_operation corolib)
add_executable(p1822-async_operation-eventqueue p1822-async_operation-eventqueue.cpp p1820.cpp)
target_link_libraries(p1822-async_operation-eventqueue corolib)
add_executable(p1824-async_operation-thread p1824-async_operation-thread.cpp p1820.cpp)
target_link_libraries(p1824-async_operation-thread corolib)

add_executable(p1830-async_operation p1820-async_operation.cpp p1830.cpp)
target_link_libraries(p1830-async_operation corolib)
add_executable(p1832-async_operation-eventqueue p1822-async_operation-eventqueue.cpp p1830.cpp)
target_link_libraries(p1832-async_operation-eventqueue corolib)
add_executable(p1834-async_operation-thread p1824-async_operation-thread.cpp p1830.cpp)
target_link_libraries(p1834-async_operation-thread corolib)

add_executable(p1840-async_operation p1840-async_operation.cpp p1840.cpp)
target_link_libraries(p1840-async_operation corolib)
add_executable(p1842-async_operation-eventqueue p1842-async_operation-eventqueue.cpp p1840.cpp)
target_link_libraries(p1842-async_operation-eventqueue corolib)
add_executable(p1844-async_operation-thread p1844-async_operation-thread.cpp p1840.cpp)
target_link_libraries(p1844-async_operation-thread corolib)

add_executable(p1900-resume_in_middle p1900-resume_in_middle.cpp)
target_link_libraries(p1900-resume_in_middle corolib)

add_executable(p2000-async_operation p2000-async_operation.cpp p2000.cpp)
target_link_libraries(p2000-async_operation corolib)
add_executable(p2002-async_operation-eventqueue p2002-async_operation-eventqueue.cpp p2000.cpp)
target_link_libraries(p2002-async_operation-eventqueue corolib)
add_executable(p2004-async_operation-thread p2004-async_operation-thread.cpp p2000.cpp)
target_link_libraries(p2004-async_operation-thread corolib)

add_executable(p2010-async_operation p2010-async_operation.cpp p2010.cpp)
target_link_libraries(p2010-async_operation corolib)
add_executable(p2012-async_operation-eventqueue p2012-async_operation-eventqueue.cpp p2010.cpp)
target_link_libraries(p2012-async_operation-eventqueue corolib)
add_executable(p2014-async_operation-thread p2014-async_operation-thread.cpp p2010.cpp)
target_link_libraries(p2014-async_operation-thread corolib)

add_executable(p2100-async_operation p2100-async_operation.cpp class01.cpp p2100.cpp)
target_link_libraries(p2100-async_operation corolib)
add_executable(p2102-async_operation-eventqueue p2102-async_operation-eventqueue.cpp class01.cpp p2100.cpp)
target_link_libraries(p2102-async_operation-eventqueue corolib)
