
project (tutorial)

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	set(CMAKE_CXX_FLAGS "/await:strict /EHsc /D _WIN32_WINNT=0x0601")
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    set(CMAKE_CXX_FLAGS "-Wall -std=c++20 -fcoroutines")
else()
	message("Unsupported compiler")
endif()

include_directories(../../include)

add_executable(p1000-sync-1rmi p1000-sync-1rmi.cpp)
add_executable(p1002-sync+thread-1rmi p1002-sync+thread-1rmi.cpp)
add_executable(p1010-async-1rmi p1010-async-1rmi.cpp)
add_executable(p1020-coroutines-1rmi p1020-coroutines-1rmi.cpp)
target_link_libraries(p1020-coroutines-1rmi corolib)

add_executable(p1100-sync-callstack-1rmi p1100-sync-callstack-1rmi.cpp)
add_executable(p1110-async-callstack-1rmi p1110-async-callstack-1rmi.cpp)
add_executable(p1112-async-callstack-1rmi-cs p1112-async-callstack-1rmi-cs.cpp)
add_executable(p1120-coroutines-callstack-1rmi p1120-coroutines-callstack-1rmi.cpp)
target_link_libraries(p1120-coroutines-callstack-1rmi corolib)
add_executable(p1122-coroutines-callstack-1rmi p1122-coroutines-callstack-1rmi.cpp)
target_link_libraries(p1122-coroutines-callstack-1rmi corolib)
add_executable(p1124-coroutines-callstack-1rmi p1124-coroutines-callstack-1rmi.cpp)
target_link_libraries(p1124-coroutines-callstack-1rmi corolib)
add_executable(p1126-coroutines-callstack-1rmi p1126-coroutines-callstack-1rmi.cpp)
target_link_libraries(p1126-coroutines-callstack-1rmi corolib)

add_executable(p1200-sync-3rmis p1200-sync-3rmis.cpp)
add_executable(p1202-sync+thread-3rmis p1202-sync+thread-3rmis.cpp)
add_executable(p1210-async-3rmis p1210-async-3rmis.cpp)
add_executable(p1212-async-3rmis-local-event-loop p1212-async-3rmis-local-event-loop.cpp)
add_executable(p1220-coroutines-3rmis p1220-coroutines-3rmis.cpp)
target_link_libraries(p1220-coroutines-3rmis corolib)
add_executable(p1222-coroutines-3rmis-generichandler p1222-coroutines-3rmis-generichandler.cpp)
target_link_libraries(p1222-coroutines-3rmis-generichandler corolib)

add_executable(p1300-sync-nested-loop p1300-sync-nested-loop.cpp)
add_executable(p1310-async-nested-loop p1310-async-nested-loop.cpp)
add_executable(p1320-coroutines-nested-loop p1320-coroutines-nested-loop.cpp)
target_link_libraries(p1320-coroutines-nested-loop corolib)

add_executable(p1400-sync-segmentation p1400-sync-segmentation.cpp)
add_executable(p1410-async-segmentation p1410-async-segmentation.cpp)
add_executable(p1420-coroutines-segmentation p1420-coroutines-segmentation.cpp)
target_link_libraries(p1420-coroutines-segmentation corolib)

add_executable(p1500-sync-3-parallel-rmis p1500-sync-3-parallel-rmis.cpp)
add_executable(p1510-async-3-parallel-rmis p1510-async-3-parallel-rmis.cpp)
add_executable(p1520-coroutines-3-parallel-rmis p1520-coroutines-3-parallel-rmis.cpp)
target_link_libraries(p1520-coroutines-3-parallel-rmis corolib)
